fix: connect transactions to Supabase persistence